@@ -281,9 +281,19 @@ sub query_params {
 }
 
 sub uri_for {
-   my ($self, $path, $args, @query_params) = @_; $path //= NUL;
+   my ($self, $path, @args) = @_; $path //= NUL;
 
-   $args and defined $args->[ 0 ] and $path = join '/', $path, @{ $args };
+   my $uri_params = []; my @query_params = ();
+
+   if (is_arrayref $args[ 0 ]) {
+      $uri_params = shift @args; @query_params = @args;
+   }
+   elsif (is_hashref $args[ 0 ]) {
+      $uri_params   =    $args[ 0 ]->{uri_params  } // [];
+      @query_params = @{ $args[ 0 ]->{query_params} // [] };
+   }
+
+   $uri_params->[ 0 ] and $path = join '/', $path, @{ $uri_params };
 
    first_char $path ne '/' and $path = $self->_base.$path;
 
