@@ -1,5 +1,7 @@
 Revision history for Web::ComposableRequest
 
+          - Added new signature to uri_for
+          - Can set extension when generating static URLs
           - Improved test coverage
 
 0.6.1     2015-12-19 12:10:53
